--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,18 @@ header {
 /*header */
 
 .header-section {
-    
+    position: absolute;
+	width: 100%;
+	top: 0;
+	left: 0;
+	z-index: 10;
+}
+
+.header-warp {
+	display: table;
+	width: 100%;
+	min-height: 83px;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.25);
 }
 
 .site-logo {
