--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
 	1. Body and Core Css
 	2. Home Section
 	3. About Section
-	4. Achievement Section
+	4. Portfolio Section
 	5. Contact Section
 	6. Responsive
 	7. Slider & Video Home
@@ -890,7 +890,7 @@ article{
 
 
 
-/*------------------------ 5 Achievement ------------------------*/
+/*------------------------ 5 Portfolio ------------------------*/
 
 .portfolio_filter {
     text-align: center;
