--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,7 @@
 /*---------------------------------- */
 
 /**
-	R. Giggs - Creative Onepage Template
-	Author : TavillaThemes
-	Copyright 2016
+Lrakotoson.github.io
 
 /* Table of Content
 ==================================================
