--- a/css/style.css
+++ b/css/style.css
@@ -774,6 +774,10 @@ article{
     display: block;
 }
 
+.resume_view{
+    display: inline;
+}
+
 .skills{
     border: solid 1px rgb(47, 47, 47);
     box-shadow: 0px 0px 42px 0px rgba(0, 0, 0, 0.08);
