grid layout initialisation

--- a/css/main.css
+++ b/css/main.css
@@ -18,272 +18,48 @@ Lrakotoson.github.io
 
 
 /*------------------------ 1 Body and Core Css ------------------------*/
-body{
-    font-family: 'Arvo', sans-serif;
-	background: #2c3e50;
+*{
+	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
 }
 
-/* Preloader */
-#preloader{
-	position: absolute;
-	left: 50%;
-	top: 50%;
-	transform: translate(-50%,-50%);
-	width: 60px;
-	height: 60px;
+.container{
+	display: grid;
+	grid-template-columns: auto auto auto;;
 }
 
-.box{
-	position: absolute;
-	width: 30px;
-	height: 30px;
-	background: #f1c40f;
-}
-
-.box:nth-child(1){
-	animation: a1 2s infinite linear;
-}
-
-.box:nth-child(2){
-	animation: a2 2s infinite linear;
-}
-
-@keyframes a1 {
-	0%{
-		top: 0;
-		left: 0;
-		width: 30px;
-		height: 30px;
-	}
-	12.5%{
-		top: 0;
-		left: 0;
-		width: 60px;
-		height: 30px;
-	}
-	25%{
-		top: 0;
-		left: 0;
-		width: 60px;
-		height: 30px;
-	}
-	37.5%{
-		top: 0;
-		left: 30px;
-		width: 30px;
-		height: 30px;
-	}
-	50%{
-		top: 0;
-		left: 30px;
-		width: 30px;
-		height: 30px;
-	}
-	62.5%{
-		top: 0;
-		left: 30px;
-		width: 30px;
-		height: 60px;
-	}
-	75%{
-		top: 0;
-		left: 30px;
-		width: 30px;
-		height: 60px;
-	}
-	87.5%{
-		top: 30px;
-		left: 30px;
-		width: 30px;
-		height: 30px;
-	}
-	100%{
-		top: 30px;
-		left: 30px;
-		width: 30px;
-		height: 30px;
-	}
-}
-
-@keyframes a2 {
-	0%{
-		right: 0;
-		bottom: 0;
-		width: 30px;
-		height: 30px;
-	}
-	12.5%{
-		right: 0;
-		bottom: 0;
-		width: 30px;
-		height: 30px;
-	}
-	25%{
-		right: 0;
-		bottom: 0;
-		width: 60px;
-		height: 30px;
-	}
-	37.5%{
-		right: 0;
-		bottom: 0;
-		width: 60px;
-		height: 30px;
-	}
-	50%{
-		right: 30px;
-		bottom: 0;
-		width: 30px;
-		height: 30px;
-	}
-	62.5%{
-		right: 30px;
-		bottom: 0;
-		width: 30px;
-		height: 30px;
-	}
-	75%{
-		right: 30px;
-		bottom: 0;
-		width: 30px;
-		height: 60px;
-	}
-	87.5%{
-		right: 30px;
-		bottom: 0;
-		width: 30px;
-		height: 60px;
-	}
-	100%{
-		right: 30px;
-		bottom: 30px;
-		width: 30px;
-		height: 30px;
-	}
-}
-
-.no-js #preloader {
-    display: none;
-}
-
-/* Header */
-header{
-	position: absolute;
-	transition: all ease 0.3s;
-	z-index:11;
-	width: 100%;
-	color: #fff;
-}
-
-.nav-fixed{
-    background: #273747;
-    border: solid 1px #273747;
-    box-shadow: none;
-    position: fixed;
-    transition: all ease 0.3s;
-    -webkit-box-shadow: -5px 10px 12px -10px rgba(189, 195, 199,0.67);
-    -moz-box-shadow: -5px 10px 12px -10px rgba(189, 195, 199,0.67);
-}
-.nav-fixed ul li a{
-    color: #fff;
-}
-
-.nav-fixed .logo{
-    color: #fff;
-}
-
-.logo{
-	float: left;
-	padding: 0 20px;
-	text-transform: uppercase;
-}
-
-.logo span{
-	font-size: 50px;
-	color:#f1c40f;
-}
-
-.menu{
-	float: right;
-	margin-bottom: 0;
-	padding: 0;
-}
-
-nav ul li{
-	float: left;
-	list-style: none;
-	position: relative;
-	margin-right: 3px;
-}
-
-nav ul li a{
-	color:#fff;
-	line-height: 72px;
-	display: block;
-	text-decoration: none !important;
-	padding: 0 7px;
-	text-transform: uppercase;
-}
-
-.menu a:hover{
-	color:#f1c40f;
-	transition: 0.5s;
-}
-
-.selected:after {
-	content: '';
-	display: block;
-	margin: auto;
-	height: 2px;
-	width: 100%;
-	transition: width .5s ease, background-color .5s ease;
-}
-
-nav ul li a:after {
-	height: 2px;
-    width: 0;
-    position: absolute;
-    margin: 0 auto;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    content: "";
-    transition: all 0.2s ease-in-out;
-}
-
-nav ul li a:hover:after {
-	width: 100%;
-    transition: all 0.2s ease-in-out;
-}
-
-/* Home */
-section{
-    padding-top: 60px;
-}
-
-.home{
-	background-size:cover;
-	height: 100%;
-	overflow: hidden;
-	width: 100%;
-	display: table;
-	z-index: 10;
-	position: center;
-}
-
-.home-content{
-	display: table-cell;
-	vertical-align: middle;
+#home{
+	grid-column: span 3;
+	background-color: aqua;
 	text-align: center;
-	z-index: 2;
-	position: relative;
- }
+	height: 100vh;
+}
 
-/* Responsive */
-@media screen and (max-width:800px){
-	.menu{
-		display: none;
-	}
+#picture{
+	background-color: blue;
+	height: calc(100vh - 150px);
+}
+
+#about{
+	grid-column: span 2;
+	background-color: brown;
+	height: calc(100vh - 150px);
+}
+
+#portfolio{
+	grid-column: span 3;
+	background-color: blueviolet;
+	height: calc(80vh - 150px);
+}
+
+#path{
+	grid-column: span 3;
+	background-color: greenyellow;
+	height: calc(80vh - 150px);
+}
+
+#footer{
+	grid-column: span 3;
+	background-color: green;
 }
