--- a/css/main.css
+++ b/css/main.css
@@ -24,15 +24,41 @@ Lrakotoson.github.io
 	padding: 0;
 }
 
-#myHeader{
+body{
+	font-family: 'Arvo', serif;
+}
+
+.nav_fixed{
+	position: fixed;
+	width: 100%;
+	background-color: #2c3e50;
+	box-shadow: 0 2px 8px #95a5a6;
+	transition: 0.7s all ease;
+}
+
+header{
 	position: relative;
+	background-image: linear-gradient(to top, rgba(44, 62, 80, 0), rgba(44, 62, 80, 0.5));
 	color:#edf0f1;
 	text-transform: uppercase;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	padding: 30px 5%;
+	padding: 10px 5%;
 	z-index: 1;
+	transition: 0.7s all ease;
+}
+
+header h2{
+	font-family: 'Poppins', sans-serif;
+	font-weight: 800;
+	color:#fff;
+	cursor: pointer;
+}
+
+header h2>span{
+	color:#f1c40f;
+	font-size:50px;
 }
 
 .navbar{
@@ -41,11 +67,12 @@ Lrakotoson.github.io
 
 .navbar li{
 	display: inline-block;
-	padding: 0 30px;
+	padding: 0 20px;
 }
 
 .navbar li a{
 	text-decoration: none;
+	color: #fff;
 	position: relative;
 	display: block;
 	overflow: hidden;
@@ -53,11 +80,15 @@ Lrakotoson.github.io
 	padding: 14px 0;
 }
 
+.navbar li a:hover{
+	color:#f1c40f;
+}
+
 .navbar li a:before{
 	content:'';
 	width: 60px;
 	position: absolute;
-	border-bottom: 5px solid black;
+	border-bottom: 5px solid #f1c40f;
 	bottom: 0;
 	right:350px;
 	transition: 0.3s all ease;
@@ -65,11 +96,6 @@ Lrakotoson.github.io
 
 .navbar li a:hover:before{
 	right: 0;
-}
-
-.nav_fixed{
-	position: fixed;
-	width: 100%;
 }
 
 .container{
