--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,7 @@ Lrakotoson.github.io
 
 body{
 	font-family: 'Arvo', serif;
+	background-color: #2c3e50;
 }
 
 .nav_fixed{
@@ -101,10 +102,15 @@ header h2>span{
 #home{
 	position: absolute;
 	top: 0;
-	background-color: aqua;
 	text-align: center;
 	height: 100vh;
 	width: 100%;
+}
+
+.player{
+	height: 100%;
+	width: 100%;
+	background: rgba(44, 62, 80, 0.5);
 }
 
 .container{
@@ -141,6 +147,7 @@ header h2>span{
 /* Mobile */
 @media (max-width: 480px){
 
+
 }
 
 /* Tablet */
@@ -155,6 +162,16 @@ header h2>span{
 		justify-content: center;
 	}
 	.navbar{
+		display: none;
+	}
+
+	/* Home background */
+	#home{
+		background: center no-repeat url("../images/background_image.jpg");
+		background-size: 100% auto;
+	}
+
+	.player{
 		display: none;
 	}
 }
