--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,7 @@ Lrakotoson.github.io
 body{
 	font-family: 'Arvo', serif;
 	background-color: #2c3e50;
+	color: #bdc3c7;
 }
 
 .nav_fixed{
@@ -45,13 +46,13 @@ header{
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	font-family: 'Poppins', sans-serif;
 	padding: 10px 1%;
 	z-index: 1;
 	transition: 0.7s all ease;
 }
 
 header h2{
-	font-family: 'Poppins', sans-serif;
 	font-weight: bold;
 	font-size: 20px;
 	color:#fff;
@@ -172,18 +173,73 @@ header h2>span{
 	top: calc(100vh + 20px);
 	display: grid;
 	row-gap: 20px;
+	font-size: 15px;
 }
 
 #picture{
-	text-align: center;
+	display: flex;
+	align-items: center;
 }
 
 #picture img{
 	width: 100%;
 }
 
-#about{
-	background-color: brown;
+#about h2{
+	display: table;
+	color: #fff;
+	padding-top: 20px;
+	text-transform: uppercase;
+	border-top: 5px solid #f1c40f;
+	font-size: 18px;
+}
+
+#about p{
+	margin: 20px;
+	font-size: 13px;
+	line-height: 2em;
+}
+
+.resume{
+	margin-top: 50px !important;
+}
+
+.resume a{
+	background:none;
+	border: 2px solid #f1c40f;
+	padding: 12px 20px;
+	transition: color 0.4s linear;
+	text-decoration: none;
+	color: #f1c40f;
+	position: relative;
+}
+
+.resume a:hover{
+	color: #2c3e50;
+}
+
+.resume a::before{
+	content:"";
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	background: #f1c40f;
+	z-index: -1;
+	transition: transform 0.5s;
+	transform-origin: 0 0;
+	transition-timing-function: cubic-bezier(0.5, 1.6, 0.4, 0.7);
+	transform: scaleX(0);
+}
+
+.resume a:hover::before{
+	transform: scaleX(1);
+}
+
+.section_title{
+	color:#fff;
+	text-transform: uppercase;
 }
 
 #skills{
@@ -210,8 +266,14 @@ header h2>span{
 
 /* Mobile */
 @media (max-width: 480px){
+	#about p{
+		font-size: 12px;
+		line-height: auto;
+	}
 
-
+	#about h2{
+		font-size: 16px;
+	}
 }
 
 /* Tablet */
@@ -236,6 +298,19 @@ header h2>span{
 
 	.typed{
 		font-size:100%;
+	}
+
+	/* Grid */
+	#picture img{
+		padding: 0 5%;
+	}
+
+	.resume{
+		text-align: center;
+	}
+
+	#about h2{
+		margin: auto;
 	}
 }
 
@@ -263,10 +338,13 @@ header h2>span{
 	}
 
 	#about{
+		padding: 5%;
 		grid-column: span 2;
 		height: 100%;
-		display: flex;
-		align-items: center;
+	}
+
+	#about p{
+		margin: 20px 0;
 	}
 
 	#skills > div{
