--- a/css/main.css
+++ b/css/main.css
@@ -276,8 +276,23 @@ header h2>span{
 	display: none;
 }
 
-#footer{
-	background-color: green;
+/* Contact */
+
+.contact_info{
+	display: flex;
+	justify-content: space-evenly;
+}
+
+.contact_info div{
+	text-align: center;
+	padding: 2% 0;
+	font-size: 12px;
+}
+
+.contact_info a{
+	text-decoration: none;
+	color: #f1c40f;
+	font-size: 50px;
 }
 
 /* 
@@ -295,6 +310,11 @@ header h2>span{
 
 	#about h2, .section_title{
 		font-size: 16px;
+	}
+
+	.contact_info{
+		flex-direction: column;
+		font-size: 40px;
 	}
 }
 
