--- a/css/main.css
+++ b/css/main.css
@@ -286,13 +286,36 @@ header h2>span{
 .contact_info div{
 	text-align: center;
 	padding: 2% 0;
-	font-size: 12px;
+	font-size: 15px;
 }
 
 .contact_info a{
 	text-decoration: none;
 	color: #f1c40f;
 	font-size: 50px;
+}
+
+#footer{
+	text-align: center;
+	background: radial-gradient(closest-side, #222f3d, #2c3e50);
+	padding-top: 1%;
+}
+
+#footer div{
+	display: flex;
+	font-size: 50px;
+	justify-content: center;
+}
+
+#footer a{
+	text-decoration: none;
+	color: #fff;
+	padding: 0 2%;
+}
+
+#footer p{
+	padding: 1% 0;
+	font-size: smaller;
 }
 
 /* 
